# watchlist_app

./: .gitignore  pyproject.toml
watchlist/: settings.py  urls.py
watchlist/movie/: admin.py  apps.py  models.py
watchlist/movie/api/: permissions.py  serializers.py  urls.py  views.py
watchlist/movie/migrations/: 0001_initial.py  0002_streamingplatform.py  0003_movie_platform.py  0004_alter_movie_platform.py  0005_review.py  0006_review_user.py  0007_movie_average_rating_movie_number_ratings.py
watchlist/myapp/: admin.py  apps.py  models.py
watchlist/myapp/migrations/: 0001_initial.py  0002_delete_house_delete_occupant.py  0003_initial.py
watchlist/user_app/: __init__.py  apps.py
watchlist/user_app/api/: serializers.py  urls.py  views.py
